[gd_scene load_steps=2 format=3 uid="uid://do3c3jse5p7hx"]

[ext_resource type="Script" path="res://addons/zylann.hterrain/tools/detail_editor/detail_editor.gd" id="1"]

[node name="DetailEditor" type="Control"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 3
anchors_preset = 0
offset_right = 189.0
offset_bottom = 109.0
script = ExtResource("1")

[node name="ItemList" type="ItemList" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_bottom = -26.0
max_columns = 0
same_column_width = true
icon_mode = 0
fixed_icon_size = Vector2i(32, 32)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -24.0

[node name="Add" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Add"

[node name="Remove" type="Button" parent="HBoxContainer"]
layout_mode = 2
text = "Remove"

[node name="Label" type="Label" parent="HBoxContainer"]
layout_mode = 2
text = "Details"

[node name="ConfirmationDialog" type="ConfirmationDialog" parent="."]
dialog_text = "Are you sure you want to remove this detail map?"

[connection signal="item_selected" from="ItemList" to="." method="_on_ItemList_item_selected"]
[connection signal="pressed" from="HBoxContainer/Add" to="." method="_on_Add_pressed"]
[connection signal="pressed" from="HBoxContainer/Remove" to="." method="_on_Remove_pressed"]
[connection signal="confirmed" from="ConfirmationDialog" to="." method="_on_ConfirmationDialog_confirmed"]
